# TFG-2526-realtime-audio-processor

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/: index.html
docs/html/: _algorithmic_reverb_effect_8cpp.html  _algorithmic_reverb_effect_8h.html  _algorithmic_reverb_effect_8h.js  _algorithmic_reverb_effect_8h_source.html  _app_menu_bar_8cpp.html  _app_menu_bar_8cpp.js  _app_menu_bar_8h.html  _app_menu_bar_8h.js  _app_menu_bar_8h_source.html  _application_controller_8cpp.html  _application_controller_8h.html  _application_controller_8h.js  _application_controller_8h_source.html  _audio_effect_base_8cpp.html  _audio_effect_base_8h.html  _audio_effect_base_8h.js  _audio_effect_base_8h_source.html  _audio_engine_8cpp.html  _audio_engine_8h.html  _audio_engine_8h.js  _audio_engine_8h_source.html  _digital_delay_effect_8cpp.html  _digital_delay_effect_8h.html  _digital_delay_effect_8h.js  _digital_delay_effect_8h_source.html  _effect_browser_panel_8cpp.html  _effect_browser_panel_8cpp.js  _effect_browser_panel_8h.html  _effect_browser_panel_8h.js  _effect_browser_panel_8h_source.html  _effect_chain_8cpp.html  _effect_chain_8h.html  _effect_chain_8h.js  _effect_chain_8h_source.html  _effect_chain_panel_8cpp.html  _effect_chain_panel_8h.html  _effect_chain_panel_8h.js  _effect_chain_panel_8h_source.html  _effect_factory_8cpp.html  _effect_factory_8h.html  (+230 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  (+31 more)
resources/translations/: es.txt
src/: ApplicationController.cpp  ApplicationController.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  EffectChain.cpp  EffectChain.h  EffectFactory.cpp  EffectFactory.h  PresetManager.cpp  PresetManager.h
src/effects/: AudioEffectBase.cpp  AudioEffectBase.h  IAudioEffect.h
src/effects/filtering/: HighPassFilterEffect.cpp  HighPassFilterEffect.h  LowPassFilterEffect.cpp  LowPassFilterEffect.h  ParametricEQEffect.cpp  ParametricEQEffect.h
src/effects/nonlinear/: FuzzEffect.cpp  FuzzEffect.h  HardClippingEffect.cpp  HardClippingEffect.h  OverdriveEffect.cpp  OverdriveEffect.h
src/effects/timebased/: AlgorithmicReverbEffect.cpp  AlgorithmicReverbEffect.h  DigitalDelayEffect.cpp  DigitalDelayEffect.h
src/gui/: AppMenuBar.cpp  AppMenuBar.h  EffectBrowserPanel.cpp  EffectBrowserPanel.h  EffectChainPanel.cpp  EffectChainPanel.h  EffectUIDescriptor.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  PedalCard.cpp  PedalCard.h  StatusBar.cpp  StatusBar.h  TransportBar.cpp  TransportBar.h  UIRegistry.cpp  UIRegistry.h
tests/: AudioSubsystemTests.cpp  CMakeLists.txt  EffectsSubsystemTests.cpp  PerformanceTests.cpp  TestMain.cpp
